--- a/src/main/java/org/jetbrains/plugins/javaFX/JavaFxSettingsConfigurable.form
+++ b/src/main/java/org/jetbrains/plugins/javaFX/JavaFxSettingsConfigurable.form
@@ -23,7 +23,7 @@
           <gridbag weightx="0.0" weighty="1.0"/>
         </constraints>
       </vspacer>
-      <component id="539ac" class="com.intellij.openapi.ui.TextFieldWithBrowseButton" binding="myPathField">
+      <component id="539ac" class="consulo.ui.ex.awt.TextFieldWithBrowseButton" binding="myPathField">
         <constraints>
           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
           <gridbag weightx="1.0" weighty="0.0"/>
