--- a/src/main/java/org/jetbrains/plugins/javaFX/packaging/JavaFxArtifactPropertiesEditor.form
+++ b/src/main/java/org/jetbrains/plugins/javaFX/packaging/JavaFxArtifactPropertiesEditor.form
@@ -50,7 +50,7 @@
             </constraints>
             <properties/>
           </component>
-          <scrollpane id="c7b69" class="com.intellij.ui.components.JBScrollPane">
+          <scrollpane id="c7b69" class="consulo.ui.ex.awt.JBScrollPane">
             <constraints>
               <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
                 <preferred-size width="-1" height="100"/>
@@ -83,7 +83,7 @@
               <text value="A&amp;pplication class:"/>
             </properties>
           </component>
-          <component id="e5f9c" class="com.intellij.openapi.ui.TextFieldWithBrowseButton" binding="myAppClass">
+          <component id="e5f9c" class="consulo.ui.ex.awt.TextFieldWithBrowseButton" binding="myAppClass">
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -132,7 +132,7 @@
               <text value="HTM&amp;L Parameters:"/>
             </properties>
           </component>
-          <component id="b2b7a" class="com.intellij.openapi.ui.TextFieldWithBrowseButton" binding="myHtmlParams">
+          <component id="b2b7a" class="consulo.ui.ex.awt.TextFieldWithBrowseButton" binding="myHtmlParams">
             <constraints>
               <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -147,7 +147,7 @@
               <text value="Application Pa&amp;rameters:"/>
             </properties>
           </component>
-          <component id="be63e" class="com.intellij.openapi.ui.TextFieldWithBrowseButton" binding="myParams">
+          <component id="be63e" class="consulo.ui.ex.awt.TextFieldWithBrowseButton" binding="myParams">
             <constraints>
               <grid row="7" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
