--- a/src/main/java/org/jetbrains/plugins/javaFX/packaging/JavaFxEditCertificatesDialog.form
+++ b/src/main/java/org/jetbrains/plugins/javaFX/packaging/JavaFxEditCertificatesDialog.form
@@ -52,7 +52,7 @@
               <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
             </constraints>
           </vspacer>
-          <component id="5411" class="com.intellij.openapi.ui.TextFieldWithBrowseButton" binding="myKeystore">
+          <component id="5411" class="consulo.ui.ex.awt.TextFieldWithBrowseButton" binding="myKeystore">
             <constraints>
               <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
